--- a/views/MasterPage2.master
+++ b/views/MasterPage2.master
@@ -38,11 +38,11 @@
             else if (document.getElementById)
                 document.getElementById("liveclock").innerHTML = myclock
 
-            setTimeout("show5()", 1000)
+            //setTimeout("show5()", 1000)
         }
 
         window.onload = show5
-
+        window.mesagges = ('<%= HelperUtil.NotifyMessages %>');
     </script>
 
     <style type="text/css">
@@ -55,45 +55,86 @@
         }
     </style>
 
+    <link rel="Stylesheet" type="text/css" href="../Content/css/metro.css" />
+    <link rel="Stylesheet" type="text/css" href="../Content/css/scpm.css" />
+
+    <script src="../Scripts/jquery.js" type="text/javascript"></script>
+    <script src="../Scripts/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="../Scripts/metro.js" type="text/javascript"></script>
+
 </head>
-<body background="/Images/Pagina.png">
+<body background="/Images/Pagina.png" class="metro">
+    <img src="/Images/encabezadoDDR.png" style="width: 100%; height: auto;" alt="header" />
     <form id="form1" runat="server">
-        <input type="hidden" id="hd" name="hd" value="1" />
-        <div style="width: 1229px">
-            <table border="0" class="backgroundRepeatBanner">
-                <tr>
-                    <td align="center" rowspan="1" style="height: 2px; text-align: left;">
+        <div>
 
-                        <div>
-                            <img src="/Images/encabezadoDDR.png" style="width: 1268px; height: 108px;" />
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="right" rowspan="1" style="width: 30%; height: 30px">
-                        <label id="liveclock" class="subtitle_fecha" style="text-align: left">
-                        </label>
-                        <asp:ImageButton ID="ImageButton2" runat="server" Height="39px"
-                            ImageUrl="~/Images/blue-home-icon.png" OnClick="ImageButton2_Click"
-                            Width="41px" />
-                        <asp:ImageButton ID="ImageButton3" runat="server" Height="35px"
-                            ImageUrl="~/Images/off.png" OnClick="ImageButton3_Click" Width="48px" />
-                        <asp:ImageButton ID="ImageButton1" runat="server" EnableTheming="False"
-                            EnableViewState="False" ImageUrl="~/views/Images/cerrar.GIF"
-                            OnClick="ImageButton1_Click" TabIndex="3" Visible="False" Width="84px" />
-                    </td>
-                </tr>
-
-                <tr>
-                    <td align="center" class="titleBanner" rowspan="1"
-                        style="width: 63%; height: 30px; text-align: center">
-                        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-                        </asp:ContentPlaceHolder>
-                    </td>
-                </tr>
-            </table>
+            <label id="liveclock" class="subtitle_fecha" style="text-align: left"></label>
+            <asp:ImageButton ID="ImageButton4" runat="server" Height="39px"
+                ImageUrl="~/Images/blue-home-icon.png" OnClick="ImageButton2_Click"
+                Width="41px" />
+            <asp:ImageButton ID="ImageButton5" runat="server" Height="35px"
+                ImageUrl="~/Images/off.png" OnClick="ImageButton3_Click" Width="48px" />
+            <asp:ImageButton ID="ImageButton6" runat="server" EnableTheming="False"
+                EnableViewState="False" ImageUrl="~/views/Images/cerrar.GIF"
+                OnClick="ImageButton1_Click" TabIndex="3" Visible="False" Width="84px" />
 
         </div>
+        <div class="page-content">
+            <div class="flex-grid no-responsive-future" style="height: 100%;">
+                <div class="row" style="height: 100%">
+                    <div class="cell size-x200" id="cell-sidebar" style="background-color: #71b1d1; height: 100%">
+                        <ul class="sidebar2 ">
+                            <li class="title">Administración Personal</li>
+                            <li class=""><a href="addPersona.aspx"><span class="mif-home icon"></span>Ingreso</a></li>
+                            <li class="stick bg-red"><a href="searchPersona.aspx"><span class="mif-cog icon"></span>Buscar</a></li>
+                            <li class="stick bg-green">
+                                <a class="dropdown-toggle" href="#"><span class="mif-tree icon"></span>Reporte</a>
+                                <ul class="d-menu" data-role="dropdown" style="display: none;">
+                                    <li><a href="#">Raza</a></li>
+                                    <li><a href="#">Sexo</a></li>
+                                    <li><a href="#">Discapacidad</a></li>
+                                </ul>
+                            </li>
+                            <li class="stick bg-red"><a href="mantenedoresPers.aspx"><span class="mif-cog icon"></span>Mantenedores</a></li>
+
+                            <li class="title">Datos Laborales</li>
+                            <li class="active"><a href="ingresoLaboral.aspx"><span class="mif-home icon"></span>Ingreso</a></li>
+                            <li class="stick bg-red"><a href="ingresoSubrroEncargo.aspx"><span class="mif-cog icon"></span>Subrogación/Encargo</a></li>
+                            <li class="stick bg-red"><a href="#"><span class="mif-cog icon"></span>Reporte</a></li>
+                            <li class="stick bg-red"><a href="MantenedoresPosiciones.aspx"><span class="mif-cog icon"></span>Mantenedor</a></li>
+                        </ul>
+                    </div>
+                    <div class="cell auto-size padding20 bg-white" id="cell-content">
+
+
+                        <input type="hidden" id="hd" name="hd" value="1" />
+                        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                        </asp:ContentPlaceHolder>
+
+
+
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </form>
+    <script type="text/javascript">
+
+        $(function () {
+            setTimeout(function () {
+                if (mesagges != "") {
+                    var msgs = mesagges.split(",");
+                    for (var m in msgs) {
+                        $.Notify({ shadow: true, timeout: 6000, keepOpen: false, type: 'info', caption: 'SCPM', content: msgs, icon: "<span class='mif-vpn-publ'></span>" });
+                    }
+                }
+            }, 300);
+
+
+        });
+
+    </script>
 </body>
 </html>
