--- a/Content/css/metro.css
+++ b/Content/css/metro.css
@@ -11643,7 +11643,6 @@ textarea.required {
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-    padding: 0 1rem;
     height: 2.125rem;
     text-align: center;
     background-color: #ffffff;
@@ -11654,9 +11653,10 @@ input[type="submit"] {
     outline: none;
     font-size: .875rem;
     line-height: 1;
-    margin: .15625rem 0;
     position: relative;
     vertical-align: middle;
+    top: 1px;
+    left: 2px;
 }
 
     input[type="button"].default,
