--- a/Content/css/scpm.css
+++ b/Content/css/scpm.css
@@ -27,3 +27,47 @@
 .metr h1.text-center {
 
 }
+
+
+
+
+
+
+
+.dialog{
+    /*max-width: ~"calc(100% - 20px)";
+    max-height: ~"calc(100% - 20px)";*/
+    height: auto;
+    width: auto;
+    margin: auto;
+
+    left: 0px;
+    right: 0px;
+    width: auto;
+    height: auto;
+    display: table;
+    top: 0;
+    bottom: 0;
+    /*    text-align: center;*/
+}
+.dialog .grid{
+
+    padding: 0px 0px;
+    margin: 0 auto;
+    list-style: none;
+    -webkit-overflow-scrolling: touch;
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+}
+.dialog.window-style{
+    width: 100%!important;
+}
+.form-actions.page-content.align-right{
+    padding-right: 0!important;
+}
+
+.margin5R{
+    margin-right: 5px;
+}
+
