--- a/views/MasterPage2.master
+++ b/views/MasterPage2.master
@@ -119,6 +119,8 @@
                 </div>
             </div>
         </div>
+        <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
+        </asp:ContentPlaceHolder>
     </form>
     <script type="text/javascript">
 
@@ -136,6 +138,27 @@
 
         });
 
+        /**
+ * 
+ * @param {type} id
+ * @returns {undefined}
+ */
+        function showDialog(id) {
+            var dialog = $(id).data('dialog');
+            dialog.open();
+        }
+
+        /**
+         * 
+         * @param {type} id
+         * @returns {undefined}
+         */
+        function ocultDialog(id) {
+            var dialog = $(id).data('dialog');
+            dialog.close();
+        }
+
     </script>
+
 </body>
 </html>
