--- a/Content/css/scpm.css
+++ b/Content/css/scpm.css
@@ -120,3 +120,23 @@ input[type="submit"]:disabled, input[type="button"].disabled, input[type="reset"
 .metro .text-right {
     text-align: right;
 }
+
+#wizardx .stepper > ul > li span {
+    margin-top: -45px;
+    display: block;
+    width: 150px;
+    left: -62px;
+    position: absolute;
+    text-align: center;
+}
+
+#wizardx .stepper > ul > li:first-child span {
+    left: 0;
+    text-align: left;
+}
+
+#wizardx .stepper > ul > li:last-child span {
+    right: 0;
+    text-align: right;
+    left:auto;
+}
