--- a/views/MasterPage2.master
+++ b/views/MasterPage2.master
@@ -40,9 +40,21 @@
     </script>
 </head>
 <body background="/Images/Pagina.png" class="metro">
-    <img src="/Images/encabezadoDDR.png" style="width: 100%; height: auto;" alt="header" />
-    <form id="form1" runat="server">
 
+
+    <form id="form1" runat="server">
+        <div style="position: relative;">
+            <img src="/Images/encabezadoDDR.png" style="width: 100%; height: auto;" alt="header" />
+            <div class="text-rigth" style="text-align: right; position: absolute; padding-right: 25px; padding-bottom: 20px; bottom: 0; right: 0;">
+
+                <span class="mif-alarm-on margin5R fg-white fg-hover-brown" style=""></span>
+                <span id="liveclock" class="subtitle_fecha margin5R fg-white fg-hover-brown" style="text-align: left; font-size: 18px;">12:12:12</span>
+
+                <asp:LinkButton runat="server" ID="home" OnClick="home_Click" CssClass="button primary dcmx"><span class="mif-home"></span></asp:LinkButton>
+                <asp:LinkButton runat="server" ID="login" OnClick="login_Click" CssClass="button warning dcmx"><span class="mif-exit"></span></asp:LinkButton>
+
+            </div>
+        </div>
 
         <div class="page-content">
             <div class="flex-grid no-responsive-future" style="height: 100%;">
@@ -73,18 +85,11 @@
                             <li class="stick bg-orange"><a href="/views/MantenedoresPosiciones.aspx"><span class="mif-cogs icon"></span>Mantenedor</a></li>
                         </ul>
                     </div>
-                    <div class="cell auto-size padding20 bg-white" id="cell-content">
+                    <div class="cell auto-size padding20 bg-white" id="cell-content" style="padding-top:40px;">
 
 
                         <input type="hidden" id="hd" name="hd" value="1" />
-                        <div class="text-rigth" style="text-align: right">
 
-                            <span class="mif-alarm-on margin5R" style="float: left"></span><span id="liveclock" class="subtitle_fecha left" style="float: left; text-align: left; font-size: 18px;"></span>
-
-                            <asp:LinkButton runat="server" ID="home" OnClick="home_Click" CssClass="button primary dcmx"><span class="mif-home"></span></asp:LinkButton>
-                            <asp:LinkButton runat="server" ID="login" OnClick="login_Click" CssClass="button warning dcmx"><span class="mif-exit"></span></asp:LinkButton>
-
-                        </div>
                         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                         </asp:ContentPlaceHolder>
 
