--- a/views/MasterPage2.master
+++ b/views/MasterPage2.master
@@ -21,9 +21,9 @@
     <link rel="Stylesheet" type="text/css" href="/Content/css/metro.css" />
     <link rel="Stylesheet" type="text/css" href="/Content/css/scpm.css" />
 
-    <script src="/Scripts/jquery.js?v=3.0.11" type="text/javascript"></script>
-    <script src="/Scripts/jquery-ui.min.js?v=3.0.11" type="text/javascript"></script>
-    <script src="/Scripts/metro.js?v=3.0.11" type="text/javascript"></script>
+    <%--<script src="/Scripts/jquery.js?v=3.0.11" type="text/javascript"></script>
+    <script src="/Scripts/jquery-ui.min.js?v=3.0.11" type="text/javascript"></script>--%>
+    <script src="/Scripts/metro.js?v=4.0.0" type="text/javascript"></script>
 
     <script language="JavaScript" type="text/javascript">
         //reloj live
@@ -122,7 +122,28 @@
                 }
             }, 300);
 
+            Inputmask.extendDefinitions({
+                "B": {//alphabet uppercasing with white spaces
+                    validator: "[\\sA-Za-z\u0410-\u044F\u0401\u0451\u00C0-\u00FF\u00B5]",
+                    cardinality: 1,
+                    casing: "upper" //auto uppercasing
+                },
+                "W": { //alfanumeric uppercasing with white spaces
+                    validator: "[\\s0-9A-Za-z\u0410-\u044F\u0401\u0451\u00C0-\u00FF\u00B5]",
+                    cardinality: 1,
+                    casing: "upper"
+                },
+                "#": { //hexadecimal
+                    validator: "[0-9A-Fa-f]",
+                    cardinality: 1,
+                    casing: "upper"
+                }
+            });
 
+            $("[data-inputmask]").each(function () {
+                $(this).inputmask();
+            });
+            
         });
 
         /**
